--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 .card{
-    background: linear-gradient(40deg, #ff6ec4, #7873f5);
+    background-color: #2c3e50;
     height:100%;
     margin: 5em;
 }
