--- a/style.css
+++ b/style.css
@@ -5,10 +5,44 @@
 .card{
     background-color: #2c3e50;
     height:100%;
-    margin: 5em;
+    margin-left: 5em;
+    margin-right: 5em;
 }
 .input{
-    text-align: left;
+    text-align: center;
+}
+.collapse{
+    display:none;
+}
+#form7{
+    width: 100%;
+    position: absolute;
+    top: 0.65rem;
+    left: -18%;
+    transition: 0.2s ease-out;
+    cursor: text;
+    color: white;
+}
+.active{
+    display: block;
+}
+.form-control{
+    color: white;
+    font-weight: 600;
+    font-style: italic;
+}
+#typeAuthor{
+    width: 50%;
+    text-align: center;
+    font-size: x-large;
+}
+#typeQuote{
+    font-size: x-large;
+    text-align: center;
+    width: 50%;
+    overflow-y: hidden;
+    resize: none;
+    padding: 0;
 }
 a{
     color: cornsilk !important;
@@ -28,7 +62,7 @@ h1{
     font-size: 1.3em !important;
     font-weight: 400 !important;
     font-style: italic;
-    margin: 3em;
+    margin: 1.5em;
 }
 body{
     font-family: 'Montserrat', sans-serif;
