--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@
     font-weight: 600;
     font-style: italic;
 }
+#addedQuotes li{
+    text-align: left;
+    text-decoration: none;
+    display: block;
+    color: cornsilk;
+    margin-top: 1em;
+}
 #typeAuthor{
     width: 50%;
     text-align: center;
